# DarwinexDownloader

./: .gitignore  DarwinexDownloader.py  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
src/: DarwinexDownloader.py  __init__.py
